@@ -1,4 +1,14 @@
 ## This Project requires the following Dependencies: 
-JAVAFX 11 
-JUNT 5 
+JAVAFX 11\
+JUNT 5\
 JDK 11
+
+## TO Setup JavaFx in Visual Studio Code: 
+Step 1: Update VScode to Latest Version\
+Step 2: Install JavaFX extension in VScode\
+Step 3: Download and Install OpenJDK and configure Java Runtime in VScode 
+
+Step 4: JavaFX SDK Setup in VScode 
+    
+      Open Settings.JSON and add the line below to every Configuration:
+            "vmArgs": "--module-path /Users/user/Downloads/javafx-sdk-11.0.2/lib --add-modules javafx.controls,javafx.fxml"
